--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "preinstall": "nlx only-allow yarn",
     "postinstall": "simple-git-hooks && nr license-check:generate",
     "setup:debug": "bash debug/genDevFiles.sh",
-    "dev": "./scripts/dev.sh",
+    "dev": "cross-env TZ=\"Asia/Tokyo\" ./scripts/dev.sh",
     "dev:vite": "vite",
     "dev:electron": "nr build:electron && electron . --disable-gpu",
     "build": "nr build:vite && nr build:electron",
@@ -34,7 +34,9 @@
     "find-deadcode": "ts-prune",
     "license-check:generate": "license-checker --production --json --out src/assets/licenses.json",
     "license-check:validate": "license-checker --production --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0;AGPL;AGPL-3.0;AGPL-3.0-only;'",
-    "test": "jest",
+    "test": "nr test:tz-utc && nr test:tz-jst",
+    "test:tz-utc": "cross-env TZ=\"UTC\" jest",
+    "test:tz-jst": "cross-env TZ=\"Asia/Tokyo\" jest",
     "test:playwright": "playwright install --with-deps && playwright test",
     "lint": "nr biome check . && nr type-check",
     "lint:fix": "nr biome check --apply ."
@@ -106,6 +108,7 @@
     "@welldone-software/why-did-you-render": "^8.0.1",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "electron": "^27.0.2",
     "electron-builder": "^24.13.3",
     "jest": "^29.7.0",
