--- a/biome.json
+++ b/biome.json
@@ -23,7 +23,7 @@
     "formatter": {
       "quoteStyle": "single"
     },
-    "globals": ["it", "describe", "expect", "jest", "beforeEach"]
+    "globals": ["it", "describe", "expect", "jest", "beforeEach", "afterAll"]
   },
   "files": {
     "ignore": [
