--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "electron-store": "^8.1.0",
     "electron-trpc": "^0.5.2",
     "electron-unhandled": "^4.0.1",
+    "exiftool-vendored": "^25.1.0",
     "lucide-react": "^0.292.0",
     "neverthrow": "^6.1.0",
     "opentype.js": "^1.3.4",
@@ -105,6 +106,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/sharp": "^0.32.0",
+    "@types/tmp": "^0.2.6",
     "@welldone-software/why-did-you-render": "^8.0.1",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
