--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tmp-promise": "^3.0.3",
     "ts-pattern": "^5.0.5",
     "vite": "^4.5.2",
     "zod": "^3.22.4"
